pillan/rook-ceph/ceph-demo-pvc.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo1
  labels:
    app: demo1
spec:
  selector:
    matchLabels:
      app: demo1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: demo1
    spec:
      containers:
      - image: alpine
        name: alpine
        command: ["/bin/sh", "-c", "trap : TERM INT; sleep infinity & wait"]
        volumeMounts:
        - name: demo1-persistent-storage
          mountPath: /var/www/html
      volumes:
      - name: demo1-persistent-storage
        persistentVolumeClaim:
          claimName: ceph-demo-pvc1
