pillan/rook-ceph/cephnfs-demo.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: cephnfs-demo
  labels:
    app: cephnfs-demo
spec:
  containers:
    - name: alpine
      image: alpine
      command: ["/bin/sh", "-c", "trap : TERM INT; sleep infinity & wait"]
      volumeMounts:
        - name: jhome
          mountPath: /data/jhome
        - name: lsstdata
          mountPath: /data/lsstdata
        - name: project
          mountPath: /data/project
        - name: scratch
          mountPath: /data/scratch
  volumes:
    - name: jhome
      nfs:
        path: /jhome
        server: nfs-jhome.tu.lsst.org
    - name: lsstdata
      nfs:
        path: /lsstdata
        server: nfs-lsstdata.tu.lsst.org
    - name: project
      nfs:
        path: /project
        server: nfs-project.tu.lsst.org
    - name: scratch
      nfs:
        path: /scratch
        server: nfs-scratch.tu.lsst.org
      #csi:
      #  driver: nfs.csi.k8s.io
      #  volumeAttributes:
      #    server: rook-ceph-nfs-jhome-a.rook-ceph.svc.cluster.local
      #    share: /jhome
