pillan/rook-ceph/ceph-dashboard-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rook-ceph-mgr-dashboard
  namespace: rook-ceph
  annotations:
    cert-manager.io/issuer: letsencrypt
spec:
  tls:
    - hosts:
        - rook-ceph.tu.lsst.org
      secretName: tls-rook-ceph-ingress
  rules:
    - host: rook-ceph.tu.lsst.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rook-ceph-mgr-dashboard
                port:
                  name: http-dashboard
